<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Find 7</string>
    <string name="category_gestures_title">Off screen gestures</string>
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="vib_test">Test</string>
    <string name="advanced_settings">Advanced</string>
    <string name="category_button">Buttons</string>
    <string name="proxi_summary_head">Check proximity sensor for handling gestures</string>
    <string name="proxi_title_head">Proximity check</string>
    <string name="swap_back_recents_summary"></string>
    <string name="swap_back_recents_title">Swap back and recents button</string>
    <string name="swap_menu_recents_summary"></string>
    <string name="swap_menu_recents_title">Swap menu and recents button</string>
    <string name="choose_app">Choose app</string>
    <string name="category_double_swipe_gesture">II gesture</string>
    <string name="gesture_app_title">Launch app</string>
    <string name="category_circle_gesture">O gesture</string>
    <string name="category_down_arrow_gesture">V gesture</string>
    <string name="category_up_arrow_gesture">A gesture</string>
    <string name="category_left_arrow_gesture">&lt; gesture</string>
    <string name="category_right_arrow_gesture">&gt; gesture</string>
    <string name="category_gestures_summary">Configure off screen gesture actions</string>
    <string name="torch_entry">Flashlight</string>
    <string name="disabled_entry">Disabled</string>
    <string name="camera_entry">Camera</string>
    <string name="music_play_entry">Play / pause music</string>
    <string name="music_prev_entry">Prev track</string>
    <string name="music_next_entry">Next track</string>
    <string name="not_ready_summary">Resolving...</string>
    <string name="resolve_failed_summary">Resolving app failed</string>
</resources>
