<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="gesture_category"
        android:title="@string/category_gestures_title"
        android:summary="@string/category_gestures_summary"
        android:persistent="false" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.omnirom.device"
                android:targetClass="org.omnirom.device.GestureSettings" />
        </PreferenceScreen>

    <PreferenceCategory
        android:title="@string/category_vibrator">
        <org.omnirom.device.VibratorStrengthPreference
            android:key="vib_strength"
            android:title="@string/vib_strength_title_head"
            android:summary="@string/vib_strength_summary_head" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_button">
        <CheckBoxPreference
            android:key="swap_menu_recents"
            android:summary="@string/swap_menu_recents_summary"
            android:title="@string/swap_menu_recents_title"
            android:persistent="false" />
        <CheckBoxPreference
            android:key="swap_back_recents"
            android:summary="@string/swap_back_recents_summary"
            android:title="@string/swap_back_recents_title"
            android:persistent="false"
            android:dependency="swap_menu_recents" />
    </PreferenceCategory>

    <!--<PreferenceCategory
        android:key="button_category"
        android:title="@string/category_button">
        <ListPreference
            android:key="back_button"
            android:title="@string/back_button_title"
            android:entries="@array/back_button_entries"
            android:entryValues="@array/back_button_values"
            android:summary="@string/back_button_summary"
            android:persistent="false" />

	</PreferenceCategory>-->
</PreferenceScreen>
